Enhance web scraper with multi-threading, dynamic selector preview, and export options
- Added multi-threading to run scraping in the background without freezing the GUI.
- Implemented a "Test Selectors" button for live preview of scraped data based on CSS selectors.
- Introduced fields for custom headers and proxies to support scraping from websites with custom requirements.
- Added retry mechanism for error handling during scraping.
- Improved error handling with real-time feedback to the user via message boxes.
- Updated export functionality to support CSV, JSON, and TXT formats.
- Styled the GUI with a modern color scheme, making the user experience more engaging.
- Configured a session save feature to remember URL, selectors, headers, and proxies for future scraping.
- Optimized the code for cleaner logic and separation of concerns across multiple files (e.g., `scraper.py`, `utils.py`).

This update makes the scraper more advanced, user-friendly, and customizable.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
-    "url": "https://realpython.com/",
-    "title_selector": "h2.card-title",
-    "link_selector": "h2.card-title a",
-    "pages": 1
+    "url": "",
+    "title_selector": "",
+    "link_selector": "",
+    "pages": 1,
+    "headers": "",
+    "proxies": ""
 }
